test/programs/error-no-vars-in-ellipsis-pattern.expected
error[E008]: no variables in term preceding ellipsis
./test/programs/error-no-vars-in-ellipsis-pattern.defs:1:33
   |
 1 | (def (copy (list (no vars here) ..))
   |                                 ^^ the ellipsis
./test/programs/error-no-vars-in-ellipsis-pattern.defs:1:18
   |
 1 | (def (copy (list (no vars here) ..))
   |                  ^^^^^^^^^^^^^^ the term preceding the ellipsis
help: there must be at least one variable in the term preceding an ellipsis
