test/programs/error-no-vars-in-ellipsis-pattern.defs
(def (copy (list (no vars here) ..))
  constructor)